overflow-x fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -2,9 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap');
 body{
     margin: 0;
-    padding: 0;
-    overflow-y: hidden;
     font-family: 'Maven Pro', sans-serif;
+    overflow-x: hidden;
 }
 
  ////////////background styling//////////////
@@ -17,6 +16,11 @@ body{
     height: 100%;
 }
 
+.relative-container{
+    position: relative;
+    padding: 1.4em;
+}
+
 @media (max-width: 900px){
     .app-background{
        width: 900px;
@@ -24,9 +28,6 @@ body{
 }
 
 
-.app-container{
-    padding: 1.4em;
-}
 
 
 //////////header elements styling///////////
